--- a/package.json
+++ b/package.json
@@ -3,12 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.21.5",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
+    "dateformat": "^5.0.3",
+    "dayjs": "^1.11.3",
+    "express": "^4.18.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-masonry-css": "^1.0.16",
+    "react-query": "^3.39.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-show-more-text": "^1.5.2",
+    "rupiah-format": "^1.0.0",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
